<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="5dip"
    android:background="@drawable/representatives_background">

    <!-- Representative Image on the Left -->
    <ImageView
        android:layout_alignParentStart = "true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="3dip"
        android:id="@+id/repImage"
        android:src="@drawable/boxer_image"
        android:layout_width="85dip"
        android:layout_height="85dip" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/repNamePartyLayout"
        android:orientation="horizontal"
        android:layout_alignTop="@+id/repImage"
        android:layout_toEndOf="@+id/repImage"
        android:layout_marginEnd="3dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/repName"
            android:text="@string/rep_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/repParty"
            android:text="@string/republican_party_label"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/repNamePartyLayout"
        android:layout_toEndOf="@id/repImage"
        android:paddingTop="2sp"
        android:id="@+id/repSeat"
        android:text="@string/rep_seat"
        android:textSize="16sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/repEmail"
        android:layout_toEndOf="@+id/repImage"
        android:layout_below="@+id/repSeat"
        android:text="@string/rep_email"
        android:textSize="16sp"
        android:paddingTop="1sp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/repWebsite"
        android:layout_below="@+id/repEmail"
        android:layout_toEndOf="@+id/repImage"
        android:text="@string/rep_website"
        android:textSize="16sp"
        android:paddingTop="2sp"/>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/repWebsite"
        android:paddingTop="2sp"
        android:id="@+id/tweetFrame">

    </FrameLayout>

</RelativeLayout>